--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <dd><a href="./1215_tailwind_es6/03_tailwindcss활용한 카드 디자인 제작하기.html" title="">03_tailwindcss활용한 카드디자인 제작하기</a>
       </dd>
       <dt>2일차</dt>
-      <dd><a href="./1216_tailwind_es6/01_tailwindcss_기본 유틸리티 클래스.html" title="">01_tailwindcss_기본 유킬리티 클래스</a></dd>
+      <dd><a href="./1216_tailwind_es6/01_tailwindcss_기본 유틸리티 클래스.html" title="">01_tailwindcss_기본 유틸리티 클래스</a></dd>
       <dd><a href="./1216_tailwind_es6/02_tailwindcss_반응형 그리드레이아웃.html" title="">02_tailwindcss_반응형 그리드 레이아웃</a></dd>
       <dt>3일차</dt>
       <dd><a href="./1217_tailwind_es6/01_tailwindcss_login.html" title="">01_tailwindcss_login</a></dd>
